tests/NormalTests/paczka1/fuzzy1/52742460.err
Error in line 3: qcsOT S470 71,1
Error in line 8: A57 S778 43,7
Error in line 10: RlBB S470 35,2
Error in line 26: rZ8 S470 52,5
